# sdl2-fractals

./: CMakeLists.txt  LICENSE.txt  README.md
include/: fractals.h  utils.h
src/: barnsley_fern.cpp  box_fractal.cpp  dragon_curve.cpp  fractal_tree.cpp  fractal_tree_line.cpp  fractal_tree_shape.cpp  gosper_island.cpp  julia_set.cpp  koch_snowflake.cpp  koch_snowflake_line.cpp  koch_snowflake_shape.cpp  main.cpp  mandelbrot_set.cpp  sierpinski_carpet.cpp  sierpinski_curve.cpp  sierpinski_triangle.cpp  utils.cpp
